--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,15 @@ body {
   box-shadow: 0 0 20px white;
   background-color: grey;
 }
+#start-btn {
+  justify-self: center;
+  font-family: 'Press Start 2P', cursive;
+  background: blue;
+  color: #FEF2BF;
+  font-size: 2.5em;
+  width: 400px;
+  height: 200px;
+  border-radius: 40px;
+  border: 10px solid black;
+  
+}
